gitops-main/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: frontend
          image: registry.gitlab.au.dk/swwao/f2025/exams-projects/group-7/pizza-frontend:v1.0
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "30m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
